@@ -267,7 +267,7 @@ InitBasicData(Module *P)
     P->datblock = AddToList(datinfo, P->datblock);
 
     // Add a definition for __basic_data_ptr
-    MaybeDeclareMemberVar(P, varname, ast_type_string);
+    MaybeDeclareMemberVar(P, varname, ast_type_string, 0);
     
     // now add in an initializer
     init = AstAssign(varname,
