@@ -2,6 +2,9 @@ Version 4.2.0
 - Fixed REG[] dereferencing
 - Fixed a problem with passing pointers to pointers to functions
 - Fixed a problem with subclasses in system module
+- Implemented mount() and getcwd()
+- Implemented OPEN FOR in BASIC
+- Implemented "public" and "private" keywords in C++ class declarations (they are currently ignored though).
 
 Version 4.1.8
 - Added CALL and REG builtins for Spin2
